# Test-GPIB-Terminal

./: .gitignore  CMakeLists.txt  Copy des Sweeps.csv  D:\CodeProjects\VSCode\projects\Diplom\Test-GPIB-Terminal\LogFiles\TestCSVNeu.csv  D:\CodeProjects\VSCode\projects\Diplom\Test-GPIB-Terminal\LogFiles\TestCSVNeuKopie.csv  Main.cpp  Makefile  README.md  Test_GPIB_Terminal.cbp  Test_GPIB_Terminal.depend  Test_GPIB_Terminal.layout  fkt_GPIB.cpp  fkt_GPIB.h  fkt_d2xx.cpp  fkt_d2xx.h  map_cmds.cpp  map_cmds.h
.CodeBlocks/: Test_GPIB_Terminal.cbp  Test_GPIB_Terminal.layout
GpibScripts/: Plotter_Messung.txt  Preset1.txt  TestPlot.txt  TestScript.txt  Z_Log.txt
LogFiles/: .~lock.TestCSV4.csv#  KopieCSVNeu.csv  PlotterMessungTest.csv  PlotterScan_2026:03:12_14:19:02.csv  PlotterScan_IQ_2026-03-14_16:53:33.csv  PlotterScan_IQ_2026-03-14_17:08:07.csv  PlotterScan_Marker_2026-03-14_16:06:09.csv  PlotterScan_Sweep_2026-03-13_19:48:24.csv  PlotterScan_Sweep_2026-03-14_14:43:24.csv  PlotterScan_Sweep_2026-03-14_18:15:47.csv  PlotterScan_Sweep_2026-03-14_18:31:05.csv  PlotterScan_Sweep_2026-03-14_18:44:23.csv  PlotterScan_Sweep_2026-03-14_18:45:32.csv  PlotterScan_Sweep_2026-03-14_18:56:22.csv  PlotterScan_Sweep_2026-03-14_19:00:57.csv  PlotterScan_Sweep_2026-03-14_19:04:40.csv  PlotterScan_Sweep_2026-03-14_19:11:26.csv  PlotterScan_Sweep_2026-03-14_19:12:35.csv  PlotterScan_Sweep_2026-03-14_19:24:53.csv  PlotterScan__2026:03:13_16:48:41.csv  PlotterScan__2026:03:13_16:58:38.csv  PlotterScan__2026:03:13_17:13:43.csv  PlotterScan__2026:03:13_17:21:46.csv  TestCSV.c.csv  TestCSV2.csv  TestCSV4.csv  TestCSVNeu.csv  TestCSVNeuKopie.csv
docs/: restructure-file-mapping.txt
include/: fkt_GPIB.h  fkt_d2xx.h  main.h
include/Plotter/: CoordinatePanel.h  GrblConfigDialog.h  GrblController.h  GrblScanWindow.h  PlotterFrame.h  SerialPortManager.h
include/hardware/: FsuMeasurement.h  GpibUsbAdapter.h  fkt_GPIB.h  fkt_d2xx.h
src/: Main.cpp  fkt_GPIB.cpp  fkt_d2xx.cpp
src/Plotter/: CoordinatePanel.cpp  GrblConfigDialog.cpp  GrblController.cpp  GrblScanWindow.cpp  PlotterFrame.cpp  SerialPortManager.cpp
src/data/: CsvManagement.cpp  CsvManagement.h  cmdGpib.h  dataManagement.cpp  dataManagement.h  systemInfo.h
src/gui/: GenericInputDialog.cpp  GenericInputDialog.h  Main.cpp  MainDocument.cpp  MainDocument.h  Mesurement.cpp  Mesurement.h  main.h  mainHelper.cpp  mainHelper.h
src/gui/FunctionWindow/: FunctionController.cpp  FunctionController.h  FunctionDocument.cpp  FunctionDocument.h  FunctionWindow.cpp  FunctionWindow.h
src/gui/GenericInput/: GenericInputDialog.cpp
src/gui/MesurementWindow/: Measurement2DController.cpp  Measurement2DController.h  MeasurementController.cpp  MeasurementController.h  MeasurementDocument.cpp  MeasurementDocument.h  Mesurement.cpp  Mesurement.h  MultiMessDocument.cpp  MultiMessDocument.h  MultiMessWindowController.cpp  MultiMessWindowController.h  REFACTORING_GUIDE.md  USAGE_EXAMPLES.md
src/gui/MesurementWindow/InputDialog/: MSetDialog.cpp  MSetDialog.h  MSetDocument.cpp  MSetDocument.h  SweepSetDialog.cpp  SweepSetDialog.h
src/gui/SettingsWindow/: SettingsDocument.cpp  SettingsDocument.h  SettingsWindow.cpp  SettingsWindow.h
src/gui/SubWindow/TerminalWindow/: TerminalController.cpp  TerminalController.h
src/gui/TerminalWindow/: TerminalController.cpp  TerminalController.h  TerminalDocument.cpp  TerminalDocument.h  TerminalWindow.cpp  TerminalWindow.h
src/gui/ValidationWindow/: ValidationDocument.cpp  ValidationDocument.h  ValidationWindow.cpp  ValidationWindow.h
src/gui/helpTab/: helpDocument.cpp  helpDocument.h  helpWin.cpp  helpWin.h
src/hardware/: FsuMeasurement.cpp  GpibUsbAdapter.cpp  fkt_GPIB.cpp  fkt_GPIB.h  fkt_d2xx.cpp
